# Cross-platform

cmake_vcpkg_demo/: CMakeLists.txt  build.bat  vcpkg with cmake build.md
cmake_vcpkg_demo/src/: const_value.h  http_request.h  https_request.h  reptile.cpp  spider.h
